*Empty MediaWiki Message*

--- a/Nelson_Mandela.mw
+++ b/Nelson_Mandela.mw
@@ -7,7 +7,7 @@ Sakin 27 iseggwasen di lḥebs deg tiwtilin tiweɛṛanin, erran-as tilelli i Ma
 
 Sakin tukkit i wɛeṛen anda de Klerk d-netta ssinefen ṭrad taɣarimt gar imuɣlen n apartheid, wid n [[Aswir Aɣelnaw Aferkan|ANC]] dɣa wid n [[Akabar Inkatha n tilelli|Inkhata]] s-uneɣmar [[zulu]], Nelson Mandela y-uɣal aselway aberkan amezwaru n [[Tafriqt n Wenẓul]] di [[1994]]. Yenheṛ tasertit n umsuɣal aɣelnaw gar iberkanen d-imellalen ; yennaɣ mgal tirgaddiwin tudmisin, lamaɛna yestehzi amennuɣ mgal [[SIDA]], yellan deg tallit n urnay deg Tafriqt n Wenẓul. Sakin lmanda awḥid, yekkes iman-is deg tameddurt tasertit turmidt, lamaɛna i kemmel arfad azayez i Uswir aɣelnaw aferkan maca i kemmel ad i ssiẓer tifuliwin-is.
 
-Yeddukel sakin deg aṭas tiddukliwin n ubellen mgal tileqqi nneɣ sida, yetwerfed ar usertatu n tigemmi tucrikt n talsa<ref name="frtdh">{{azday web|url=http://www.frtdh.org/fr/article/celebration-du-mandela-day-chaque-18-juillet-nelson-mandela-icone-mondiale-et-patrimoine-commun-de-l-humanite-50.html|titre=Tameɣra n "Ass n Mandela" yal 18 yulyu, Nelson Mandela udem amaḍlan d tigemmi tucrikt n talsa|asmel=www.frtdh.org|assefqed ass n=25 yulyu 2012}}</ref>, Yeqqim d-yiwen udem deg umaḍal yetsmeḥsesen ɣef usentel n [[Izerfan n Wergaz]] dɣa yetwali am baba-s n Tafriqt n Wenẓul [[Amezruy n Tafriqt n Wenẓul seg 1994|agetiri d amegday ummid]], semman-as « [[aɣlan taslit n wenẓar]] », ɣas ma tamurt yesɛa weṛɛad igna n tirgaddiwin tudmisin, tussdiwin timettiyin dɣa tuqqla ɣer timɣiwan.
+Yeddukel sakin deg aṭas tiddukliwin n ubellen mgal tileqqi nneɣ sida, yetwerfed ar usertatu n tigemmi tucrikt n talsa<ref name="frtdh">{{Cite web|url=http://www.frtdh.org/fr/article/celebration-du-mandela-day-chaque-18-juillet-nelson-mandela-icone-mondiale-et-patrimoine-commun-de-l-humanite-50.html|title=Tameɣra n "Ass n Mandela" yal 18 yulyu, Nelson Mandela udem amaḍlan d tigemmi tucrikt n talsa|asmel=www.frtdh.org|assefqed ass n=25 yulyu 2012}}</ref>, Yeqqim d-yiwen udem deg umaḍal yetsmeḥsesen ɣef usentel n [[Izerfan n Wergaz]] dɣa yetwali am baba-s n Tafriqt n Wenẓul [[Amezruy n Tafriqt n Wenẓul seg 1994|agetiri d amegday ummid]], semman-as « [[aɣlan taslit n wenẓar]] », ɣas ma tamurt yesɛa weṛɛad igna n tirgaddiwin tudmisin, tussdiwin timettiyin dɣa tuqqla ɣer timɣiwan.
 
 
 == Tizmilin ==
