*Empty MediaWiki Message*

--- a/Nelson_Mandela.mw
+++ b/Nelson_Mandela.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-'''Nelson Rolihlahla Mandela''' (susru s [[xhosa (tutlayt)|xhosa]] {{MSAPI|x|o|ˈ|l|i|ː|ɬ|a|ɬ|a| m|a|n|ˈ|d|e|ː|l|a}}), ɣef ayed isem n tamadla-s '''« Madiba »''', ilul ass 18 yulyu 1918 di [[Mvezo]]<ref name="frtdh">{{azday web|url=http://www.sahistory.org.za/people/nelson-rolihlahla-mandela|titre= Tameddurt n Nelson Mandela ɣef usmel s tanglizt ''South Africa History Online''}}</ref> ([[Tadukkli n Tafriqt n Unẓul]]). Yemmut ass 5 dujamber 2013 di [[Johannesburg]], d-[[argaz n Uwanek]] n [[Tafriqt n Wenẓul]] ; yella deg iɣellaten imezrayen n Imenɣi mgal anagraw aserti n [[apartheid]] uqbel ad yuɣal [[Iselwayen n Tefriqt n Wenẓul|aselway n Tagduda n Tefriqt n Wenẓul]] seg [[1994]] ar [[1999]], sakin  des [[Tifranin di Tafriqt n Wenẓul seg 1994|tifranin timezwura tiɣelnawin war beḍḍu n iri]] deg l'[[Amezruy n Tafriqt n Wenẓul|umezruy n tmurt agi]].
+'''Nelson Rolihlahla Mandela''' (susru s [[xhosa (tutlayt)|xhosa]] {{MSAPI|x|o|ˈ|l|i|ː|ɬ|a|ɬ|a| m|a|n|ˈ|d|e|ː|l|a}}), ɣef ayed isem n tamadla-s '''« Madiba »''', ilul ass 18 yulyu 1918 di [[Mvezo]]<ref name="frtdh">{{Cite web|url=http://www.sahistory.org.za/people/nelson-rolihlahla-mandela|title= Tameddurt n Nelson Mandela ɣef usmel s tanglizt ''South Africa History Online''}}</ref> ([[Tadukkli n Tafriqt n Unẓul]]). Yemmut ass 5 dujamber 2013 di [[Johannesburg]], d-[[argaz n Uwanek]] n [[Tafriqt n Wenẓul]] ; yella deg iɣellaten imezrayen n Imenɣi mgal anagraw aserti n [[apartheid]] uqbel ad yuɣal [[Iselwayen n Tefriqt n Wenẓul|aselway n Tagduda n Tefriqt n Wenẓul]] seg [[1994]] ar [[1999]], sakin  des [[Tifranin di Tafriqt n Wenẓul seg 1994|tifranin timezwura tiɣelnawin war beḍḍu n iri]] deg l'[[Amezruy n Tafriqt n Wenẓul|umezruy n tmurt agi]].
 
 Nelson Mandela yekcem ar ''[[Aswir Aɣelnaw Aferkan|Uswir Aɣelnaw Aferkan]]'' (ANC) deg ussegwas [[1944]], iwakken ad i nnaɣ mgal aɣmar aserti n [[Imellalen (agwlim) n Tafrikt n Wenẓul|tadersi tamellalt]] dɣa [[abeṭṭu n iran]] i t-seṭṭef taneggarut agi. Yuɣal [[abugaṭu|d-abugaṭu]], i ttekki ar ubellen war takriḍt mgal isuḍaf n [[apartheid]], id i yesexdem anabaḍ n [[Akabar Aɣelnaw (Tafriqt n Wenẓul)|Ukabar Aɣelnaw]] seg [[tifranin deg Tafriqt n Wenẓul (1910-1994)|1948]]. Deg useggwas [[1960]], [[Aswir Aɣelnaw Aferkan|ANC]] yuɣal d-amegdul ; daɣen, abellen Amelwi ur d-yettak ara igmaḍ yelḥan, Mandela yesnulfa-d ageṭṭum aserdas n ANC, ''[[Umkhonto we Sizwe|Umkhonto we Sizwe (Uzzal n uxtuc n uɣlan)]]'', deg useggwas [[1961]]. Xedmen timhalin n [[anesfata|wesfata]] mgal isgulaf izuyaz d-iserdasen. Ass n 12 yulyu 1963, yetweḥbes sɣuṛ lbulis n Tafriqt n Unẓul s-timula n [[Central Intelligence Agency|CIA]] (Tafullut Talemmast n Umel), daɣen ḥekmen-as i lḥebs d imuhal n tmara alamma d lmut deg [[aẓmaẓ n Rivunia|uẓmaẓ n Rivunia]]. Imir, y-uɣal d-azamul n ubellen i tulut n iran dɣa yermes tadhelt tagraɣlant i temɣeren.
 
