--- a/Yemma_Xliǧa.mw
+++ b/Yemma_Xliǧa.mw
@@ -13,7 +13,7 @@ Yemma Xliǧa teǧǧa-d aṭas n tarwa-s (ugar n 10), win yettwasnen aṭas gar-a
 
 '''Jeddi Ḥmed''' (seg uẓar n Yemma Xliǧa), d argaz n tlelli, iruḥ yezdaɣ deg taddart n '''Yiɣil Ḥemmad''' deg tɣiwant n Ṣaḥariǧ, sin akin iruḥ ɣer ugafa, s amḍiq i mu-qqaren '''Taliwin-Aqbil''' s deffir n '''Tizi n tirurda''' akken ad yeffer seg '''Iṭerkiyen''' akked '''Isbenyuliyen'''. Yeǧǧa-d 3 n tarwa : '''Muḥend''' i yunagen ɣer wexxam n yillu deg [[Mekka]], dɣa yeqqimen din, ur d-yuɣal ara akk. Seg waken ɣezzif uraju n '''jeddi Ḥmed''' i mmi-s, yegzem usirem-is. Ɣef 70 n iseggasen, jeddi Ḥmed iɛawed zwaǧ seld mi temmut tmeṭṭut-is tamenzut, yeǧǧa-d seg-s 2 n warraw-is : '''Belqasem''' d '''Saɛid'''<ref>Cfaya n yemɣaṛen n Yibelbaren </ref>.
 
-'''Belqasem''' (mmi-s n jeddi Ḥmed) ɣer taggara n wagim wis XVIII, yeǧǧa-d sin warrac d taqcict : '''Muḥend''', '''Ḥmed''' d '''Saɛdiya'''. Ma yella d '''Saɛid''' gma-s n '''Belqasem''', yeǧǧa-d aqcic akked taqcict : '''Qasi''' d '''Feḍḍima'''. Feḍḍima tedda d tislit ɣer taddart '''Ibehlal''', yiwwet seg yessi-s semman-as daɣen '''Yemma Xliǧa''', d tameṭṭut n '''Ccix Ɛli Ben Ɛisa''', jeddi-s n [[Faḍma n Sumer|Lalla Faḍma n Sumer]], am wakken i d-yedda deg usefru “Ilyadat Elǧazayer” n [[Mufdi Zakariya]]<ref>{{Cite web|language = Arabe-Français|title= Asefru n Mufdi Zakariya (s taɛrabt)|url = http://www.emazika.info/download/search/video/1,Poeme+Moufdi+Zakaria.html}}</ref>..
+'''Belqasem''' (mmi-s n jeddi Ḥmed) ɣer taggara n wagim wis XVIII, yeǧǧa-d sin warrac d taqcict : '''Muḥend''', '''Ḥmed''' d '''Saɛdiya'''. Ma yella d '''Saɛid''' gma-s n '''Belqasem''', yeǧǧa-d aqcic akked taqcict : '''Qasi''' d '''Feḍḍima'''. Feḍḍima tedda d tislit ɣer taddart '''Ibehlal''', yiwwet seg yessi-s semman-as daɣen '''Yemma Xliǧa''', d tameṭṭut n '''Ccix Ɛli Ben Ɛisa''', jeddi-s n [[Faḍma n Sumer|Lalla Faḍma n Sumer]], am wakken i d-yedda deg usefru “Ilyadat Elǧazayer” n [[Mufdi Zakariya]].
 
 Ass-agi, widak i d-yefrurin seg Yemma Xliǧa d Belqasem n At Buḥrereb, ddmen isem n twacult '''Waɛrab'''.
 
