*Empty MediaWiki Message*

--- a/George_R._R._Martin.mw
+++ b/George_R._R._Martin.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-'''George R. R. Martin''', ilul ass n 20 ctamber 1948 di [[Bayonne (New Jersey)|Bayonne]] ([[New Jersey]]), d [[amaru]] [[Iwunak Yeddukklen|amarikani]] n [[tussna n ussugen]] dɣa n [[fantasy]], daɣen d [[amessiyes]] akkw d [[anfaras n tiliẓri]]. Amahil ines yettwasnen ugar wiyaḍ nniḍen d ''[[A Game of Thrones]]'', yettwassezgan ar tiliẓri sɣur [[Home Box Office|HBO]] ddaw azwel ''[[Game of Thrones]]''. Yerbeḥ aṭas n arrazen iseklanen dɣa yettwafren sɣur tasɣunt ''[[Time (tasɣunt)|Time]]'' am yiwen n imdanen ugaren wiyaḍ nniḍen yesɛan tazrirt ɣef umaḍal deg useggwas 2011<ref>{{azday web|url=http://www.time.com/time/specials/packages/completelist/0,29569,2066367,00.html|langue=en|azwel=The 2011 TIME 100|site=time.com}}</ref>. Ass agi yettwaḥsab am {{Citation|[[J. R. R. Tolkien|Tolkien]] amarikani}}<ref>{{Azday web|url=http://www.time.com/time/arts/article/0,8599,2081774,00.html|langue=en|azwel=George R.R. Martin: An American Tolkien|site=time.com}}</ref>{{,}}<ref>{{Azday web|langue=en|url=http://www.theguardian.com/books/2014/aug/11/george-rr-martin-in-quotes-i-love-writing-about-bastards|azwel=George RR Martin in quotes: 'I love writing about bastards'|auteur=Marta Bausells|site=[[The Guardian]]|consulté le=20 janvier 2015}}</ref>.
+'''George R. R. Martin''', ilul ass n 20 ctamber 1948 di [[Bayonne (New Jersey)|Bayonne]] ([[New Jersey]]), d [[amaru]] [[Iwunak Yeddukklen|amarikani]] n [[tussna n ussugen]] dɣa n [[fantasy]], daɣen d [[amessiyes]] akkw d [[anfaras n tiliẓri]]. Amahil ines yettwasnen ugar wiyaḍ nniḍen d ''[[A Game of Thrones]]'', yettwassezgan ar tiliẓri sɣur [[Home Box Office|HBO]] ddaw azwel ''[[Game of Thrones]]''. Yerbeḥ aṭas n arrazen iseklanen dɣa yettwafren sɣur tasɣunt ''[[Time (tasɣunt)|Time]]'' am yiwen n imdanen ugaren wiyaḍ nniḍen yesɛan tazrirt ɣef umaḍal deg useggas 2011<ref>{{Cite web|url=http://www.time.com/time/specials/packages/completelist/0,29569,2066367,00.html|language=en|title=The 2011 TIME 100}}</ref>. Ass agi yettwaḥsab am {{Citation|[[J. R. R. Tolkien|Tolkien]] amarikani}}<ref>{{Cite web|url=http://www.time.com/time/arts/article/0,8599,2081774,00.html|language=en|title=George R.R. Martin: An American Tolkien}}</ref>{{,}}<ref>{{Cite web|language=en|url=http://www.theguardian.com/books/2014/aug/11/george-rr-martin-in-quotes-i-love-writing-about-bastards|title=George RR Martin in quotes: 'I love writing about bastards'|author=Marta Bausells|website=The Guardian|access-date=20 yennayer 2015}}</ref>.
 
 == Tiwelhiwin ==
 {{Références|colonnes=2}}
