*Empty MediaWiki Message*

--- a/Taberlinit_2012.mw
+++ b/Taberlinit_2012.mw
@@ -141,12 +141,11 @@ Isura ddaw agi kecmen ar timenyagert i [[Ursu n ureɣ n asaru ugaren wiyaḍ nni
 ! Annayen
 |-
 |[[Ursu n ureɣ n iseɣ]]
-| [[Meryl Streep]]<ref>{{Azday web
+| [[Meryl Streep]]<ref>{{Cite web
  | url = http://www.premiere.fr/Cinema/News-Cinema/Taberlinit-2012-Meryl-Streep-a-l-honneur-3064824
- | azwel = Taberlinit 2012 : Meryl Streep à l'honneur
- | asmel = [http://www.premiere.fr Premiere.fr]
- | en ligne le = 3 janvier 2012
- | consulté le = 4 janvier 2012
+ | title = Taberlinit 2012 : Meryl Streep à l'honneur
+ | website = [http://www.premiere.fr Premiere.fr]
+ | access-date = 4 yennayer 2012
 }}</ref>
 | Tasegbart
 |-
