--- a/Umuɣ_n_timdinin_n_Merruk.mw
+++ b/Umuɣ_n_timdinin_n_Merruk.mw
@@ -469,13 +469,13 @@ I umuɣ s amizwer n amḍan n imezdaɣen af timdinin timeqqṛanin n Merruk, ẓ
 * {{pdf}} {{article|prénom1=Maurice|nom1=Catin|lien auteur1=|prénom2=Christine|nom2=Cuenca|lien auteur2=|prénom3=Abdelhak|nom3=Kamal|lien auteur3=|titre=Note et document : L'évolution de la structure et de la primatie urbaines au Maroc|périodique=Région et développement|lien périodique=|éditeur=L'Harmattan|lien éditeur=L'Harmattan|numéro=27|année=2008|pages=216-223|url texte=http://lead.univ-tln.fr/files/2007-2.pdf}}
 * {{article|prénom1=Redouane|nom1=Ramdani|titre=Enquête. Aux frontières du réel|périodique=TelQuel|lien périodique=TelQuel|numéro=248|jour=18-24|mois=novembre|année=2006|url texte=http://www.telquel-online.com/archives/248/couverture_248_1.shtml|id=telquel}} 
 * {{pdf}} {{ouvrage|id=démo|auteur=Centre des études et des recherches démographiques du Haut-Commissariat au plan|titre=Démographie marocaine|sous-titre=Tendances passées et perspectives d'avenir|numéro chapitre=4|titre chapitre=Urbanisation et dynamique des villes au Maroc|année=2005|isbn=9954-405-28-3|pages totales=94|passage=35-51|lire en ligne=http://www.ondh.ma/Pdf_doc%5CdemographieA4corrige.pdf}}
-* {{lien web|url=http://www.lavieeco.com/documents_officiels/Recensement%20population.pdf|titre=Recensement général de la population et de l'habitat de 2004 : Population légale du Maroc|auteur=[[Haut-Commissariat au plan]]|site=[[La Vie éco]]|pages totales=68|format=pdf|id=RGHP}}
+* {{Citeweb|url=http://www.lavieeco.com/documents_officiels/Recensement%20population.pdf|title=Recensement général de la population et de l'habitat de 2004 : Population légale du Maroc|author=[[Haut-Commissariat au plan]]|website=[[La Vie éco]]|id=RGHP}}
 
 === Izdayen ===
-* {{lien web|url=http://e-geopolis.eu/spip.php?rubrique41|auteur=Laboratoire de recherche SEDET (CNRS/université Denis Diderot Paris VII)|titre=Résultats scientifiques sur l'urbanisation de cinq pays de la zone MENA, dont le Maroc|site=e-geopolis.eu}}
-* {{lien web|url=http://www.mhu.gov.ma/Pages/Villes/Programme%20Villes%20sans%20bidonvilles.aspx|titre=Programme Villes sans bidonvilles|site=www.mhu.gov.ma}}
-* {{pdf}} {{lien web|url=http://www.radarsmaroc.com/pdf/distance_villes.pdf|titre=Distance entre les principales villes|site=www.radarsmaroc.com}}
-* {{lien web|url=http://www.rdh50.ma/fr/atlas02-6.asp|titre=Carte de l'évolution des populations urbaine et rurale depuis l'indépendance}} et {{lien web|url=http://www.rdh50.ma/fr/atlas02-7.asp|titre=graphiques sur la distribution du poids démographique des villes selon leur importance|site=www.rdh50.ma}}
+* {{Cite web|url=http://e-geopolis.eu/spip.php?rubrique41|auteur=Laboratoire de recherche SEDET (CNRS/université Denis Diderot Paris VII)|titre=Résultats scientifiques sur l'urbanisation de cinq pays de la zone MENA, dont le Maroc|website=e-geopolis.eu}}
+* {{Cite web|url=http://www.mhu.gov.ma/Pages/Villes/Programme%20Villes%20sans%20bidonvilles.aspx|title=Programme Villes sans bidonvilles|website=www.mhu.gov.ma}}
+* {{pdf}} {{Cite web|url=http://www.radarsmaroc.com/pdf/distance_villes.pdf|title=Distance entre les principales villes|website=www.radarsmaroc.com}}
+* {{Cite web|url=http://www.rdh50.ma/fr/atlas02-6.asp|title=Carte de l'évolution des populations urbaine et rurale depuis l'indépendance}} et {{Cite web|url=http://www.rdh50.ma/fr/atlas02-7.asp|title=graphiques sur la distribution du poids démographique des villes selon leur importance|website=www.rdh50.ma}}
 
 == Notes et références ==
 {{références|colonnes=2}}
