--- a/Umuɣ_n_timdinin_n_Merruk.mw
+++ b/Umuɣ_n_timdinin_n_Merruk.mw
@@ -472,7 +472,7 @@ I umuɣ s amizwer n amḍan n imezdaɣen af timdinin timeqqṛanin n Merruk, ẓ
 * {{Citeweb|url=http://www.lavieeco.com/documents_officiels/Recensement%20population.pdf|title=Recensement général de la population et de l'habitat de 2004 : Population légale du Maroc|author=[[Haut-Commissariat au plan]]|website=[[La Vie éco]]|id=RGHP}}
 
 === Izdayen ===
-* {{Cite web|url=http://e-geopolis.eu/spip.php?rubrique41|auteur=Laboratoire de recherche SEDET (CNRS/université Denis Diderot Paris VII)|titre=Résultats scientifiques sur l'urbanisation de cinq pays de la zone MENA, dont le Maroc|website=e-geopolis.eu}}
+* {{Cite web|url=http://e-geopolis.eu/spip.php?rubrique41|auteur=Laboratoire de recherche SEDET (CNRS/université Denis Diderot Paris VII)|title=Résultats scientifiques sur l'urbanisation de cinq pays de la zone MENA, dont le Maroc|website=e-geopolis.eu}}
 * {{Cite web|url=http://www.mhu.gov.ma/Pages/Villes/Programme%20Villes%20sans%20bidonvilles.aspx|title=Programme Villes sans bidonvilles|website=www.mhu.gov.ma}}
 * {{pdf}} {{Cite web|url=http://www.radarsmaroc.com/pdf/distance_villes.pdf|title=Distance entre les principales villes|website=www.radarsmaroc.com}}
 * {{Cite web|url=http://www.rdh50.ma/fr/atlas02-6.asp|title=Carte de l'évolution des populations urbaine et rurale depuis l'indépendance}} et {{Cite web|url=http://www.rdh50.ma/fr/atlas02-7.asp|title=graphiques sur la distribution du poids démographique des villes selon leur importance|website=www.rdh50.ma}}
