--- a/Agraw_n_Euro.mw
+++ b/Agraw_n_Euro.mw
@@ -21,7 +21,7 @@ Euroagraw mačči d tasudut tanaggayt. Sakkin tettwers [[Tadukli tudmist d taqar
 === Tira d timselɣa ===
 {{Timselɣa|tijga=2}}
 === Adriraw  ===
-* Projet de traité constitutionnel, article III et protocole {{numéro}}12
+* Projet de traité constitutionnel, article III et protocole n° 12
 * Conclusions du Conseil européen de Luxembourg (12-13 décembre 1997)
 * Conclusions de la présidence du Conseil de Nice (7-9 décembre 2000)
 * ''Droit européen'', JC Gautron, Dalloz, édition 2006
