*Empty MediaWiki Message*

--- a/Strassburg.mw
+++ b/Strassburg.mw
@@ -1,6 +1,6 @@
 {{infobox city}}
 '''Strasbourg''' (susru {{MSAPI|s|t|ʁ|a|z|b|u|ʁ}} {{Asusru|Fr-Paris--Strasbourg.ogg}}), '''{{lang|gsw|Strossburi}}''' (susru {{MSAPI|ʃ|t|r|o|s|b|u|r|i}}) s [[Talsassit]] akked '''{{lang|de|Straßburg}}''' s [[talmanit]], d tamdint tezga-d deg ugmuḍ n [[Franṣa]]  af iri azelmaḍ n wasif n [[Rhein]]. D [[tamaneɣt]] n temnaḍt [[Elsass]] d département n [[Bas-Rhin]]. Strassburg d asutel n [[Aseqqamu n Turuft]] seg [[1949]], du [[Amni Urufi]] si [[1992]] d [[Tasenbert Turufit n Izerfan n Wemdan]] di Leqṣer n Inzerfan n Wemdan si [[1998]], semmen-as tamaneɣt turufit. 
 
-S imezdaɣ-ines, Strassburg d tamdint tamezwarut n Franṣa Tanegmuḍt d tis sat s ugdud-ines.                                               </ref>[http://www.insee.fr/fr/recensement/page_accueil_rp.htm Site du recensement de l’INSEE], izwilen di 8 maɣres 2006.</ref>.
+S imezdaɣ-ines, Strassburg d tamdint tamezwarut n Franṣa Tanegmuḍt d tis sat s ugdud-ines.                                               <ref>[http://www.insee.fr/fr/recensement/page_accueil_rp.htm Site du recensement de l’INSEE], izwilen di 8 maɣres 2006.</ref>.
 
 [[Category:Timdinin]]
