*Empty MediaWiki Message*

--- a/Pink_Floyd.mw
+++ b/Pink_Floyd.mw
@@ -10,16 +10,16 @@
 *Atom Heart Mother (Ktuber 10, 1970)
 *Meddle (Ktuber 30, 1971)
 *Obscured by Clouds (Yunyu 3, 1972)
-*The Dark Side of the Moon (Maɣres 24, 1973)
+*The Dark Side of the Moon (Meɣres 24, 1973)
 *Wish You Were Here (album)|Wish You Were Here (Ctamber 15, 1975)
 *Animals (Yennayer 23, 1977)
 *The Wall (Wamber 30, 1979)
-*The Final Cut (album)|The Final Cut (Maɣres 23, 1983)
+*The Final Cut (album)|The Final Cut (Meɣres 23, 1983)
 *A Momentary Lapse of Reason (Ctamber 7, 1987)
-*The Division Bell (Maɣres 30, 1994)
+*The Division Bell (Meɣres 30, 1994)
 *Ummagumma (Ktuber 25, 1969) (half live, half studio)
 *Delicate Sound of Thunder (Wamber 22, 1988)
 *P•U•L•S•E (Maggu 29, 1995)
-*Is There Anybody Out There? The Wall Live 1980-81 (Maɣres 23, 2000)
+*Is There Anybody Out There? The Wall Live 1980-81 (Meɣres 23, 2000)
 
 [[Category:Aẓawan]][[Category:Aggay n Rock]]
