--- a/Keukenhof.mw
+++ b/Keukenhof.mw
@@ -1,2 +1,2 @@
 {{Databox}}
-'''Keukenhof''' d taɣult i iqerben ar temdint n Lisse, deg Tmura n Wadda. Yeldi yal aseggas seg maɣres ɣer mayu. Deg 2009, 850000 inerzaf rezfen ɣer Keukenhof.
+'''Keukenhof''' d taɣult i iqerben ar temdint n Lisse, deg Tmura n Wadda. Yeldi yal aseggas seg meɣres ɣer mayyu. Deg 2009, 850 000 inerzaf rezfen ɣer Keukenhof.
