*Empty MediaWiki Message*

--- a/Ɛli_Ɛemran.mw
+++ b/Ɛli_Ɛemran.mw
@@ -14,7 +14,7 @@ D ameẓyan yettaɛraḍ yetturar snitra, yessaweḍ ixedm-ed yiwet s tebelyunt 
 
 Asmi yeffeɣ i tillumẓit, Ɛli yettwassen d win yettarun isefra ak ttezlatin, imi tizlatin ines timezwura i yura, Kra deg-sent cnantent kra icennayen yetwasenen, gar-asen Lani Rabaḥ.
 
-Asmi yella di tesdawit, dinna Ɛli i d-yebda yettbin-id, imi yella yetturar snitra, ixeddem aẓawan, icennu i yiwet n tarbaɛt umezgun n tesdawit n Dda Lmulud at Mɛemmar di Tiziwezzu, uwumi qaren <''Maɣres''> ; Di tallit nni, yebda yetturar tizlatin n Yidir, Simon and Garfunkel, Moustaki, Cabrel, Inaṣliyen, [[Pink Floyd]], Abranis, Cat Steγens,... S wakka Ɛli ilemmed u yebda isurifen ines imezwura deg-wubrid n lfen.
+Asmi yella di tesdawit, dinna Ɛli i d-yebda yettbin-id, imi yella yetturar snitra, ixeddem aẓawan, icennu i yiwet n tarbaɛt umezgun n tesdawit n Dda Lmulud at Mɛemmar di Tiziwezzu, uwumi qqaren <''Meɣres''> ; Di tallit nni, yebda yetturar tizlatin n Yidir, Simon and Garfunkel, Moustaki, Cabrel, Inaṣliyen, [[Pink Floyd]], Abranis, Cat Steγens,... S wakka Ɛli ilemmed u yebda isurifen ines imezwura deg-wubrid n lfen.
 
 Di 2001, yesekles tasfift-ines tamenzut, anda is yeqqar : <''Amsebrid''>, s wakka, s tesfift-agi, Ɛli yekcem annar n cna.Ur iɛeṭṭel ara yebda timaɣriwin di tmurt n [[leqbayel]], deg-waxxam n yedles Lmulud at Mɛemmar, daɣen deg-wuxxam umezgun n [[Bgayet]].
 
