*Empty MediaWiki Message*

--- a/Ɛli_Ɛemran.mw
+++ b/Ɛli_Ɛemran.mw
@@ -1,22 +1,22 @@
 {{Infobox biography}}
-'''Ɛli Ɛemran''', s yissem-is unṣib (Ɛli Kulugli, s tefransist : ''Ali Koulougli''), d acennay n tmurt n [[leqbayel]], ilul-d ass n 20 Mayu 1969, deg Igariden i d-yezgan di Mɛatqa (Tizi wezzu).
+'''Ɛli Ɛemran''', s yissem-is unṣib (Ɛli Kulugli, s tefransist : ''Ali Koulougli''), d acennay n tmurt n [[leqbayel]], ilul-d ass n 20 Mayyu 1969, deg Igariden i d-yezgan di Mɛatqa (Tizi wezzu).
 Ɛemran yella d isem n yiwen si lejdud-is. 
 
 ==Tameddurt n Ɛli Ɛemran==
 ==Temẓi-s==
 
-Yebda yettarra lmendad-is ar uẓawan si temzi-s, asmi yella isell i Radyu ak d kra n tesfifin n kra icennayen yellan di teswaɛt nni, Aladra isell i widen akken ḥarmen ur d sɛeddayen ara tizlatin nsen deg yimaṭṭafen n Radyu n tmurt n Lzayer, amedya n Dda
-[[Sliman Ɛazem]]... d wiyaḍ nniḍen
+Yebda yettarra lmendad-is ar uẓawan si temzi-s, asmi yella isell i Radyu akked kra n tesfifin n kra icennayen yellan di teswaɛt-nni, Aladra isell i widen akken ḥarmen ur d-sɛeddayen ara tizlatin-nsen deg yimaṭṭafen n Radyu n tmurt n Lzayer, amedya n Dda
+[[Sliman Ɛazem]]... d wiyaḍ nniḍen.
 
-D ameẓyan yettaɛraḍ yetturar snitra, yessaweḍ ixedm-ed yiwet s tebelyunt n zzit, am akken xedmen ak icennayen iɛeddan weqbel-is ; Yettaɛraḍ, yeṭṭafar, yal tizlitt umi slan imeẓẓuǳen-is ; D acu kan netta yesɛa zhar, imi yufa-d snitra deg wexxam si temẓi-s, xas akken ttaqburt maɛna ar ɣures tesɛa azal meqqren ; Tella niqal n d ayla n gma-s armi yuɣal ikesbi-tt, netta.
+D ameẓyan yettaɛraḍ yetturar snitra, yessaweḍ yexdem-d yiwet s tebelyunt n zzit, am akken xedmen akk icennayen iɛeddan uqebl-is; Yettaɛraḍ, yeṭṭafar, yal tizlitt umi slan imeẓẓuǳen-is; D acu kan netta yesɛa zzher, imi yufa-d snitra deg wexxam si temẓi-s, xas akken d taqburt meɛna ar ɣur-s tesɛa azal meqqren; Tella niqal n d ayla n gma-s armi yuɣal ikesbi-tt, netta.
 
 ==Amecwar-is n Lfen==
 
 Asmi yeffeɣ i tillumẓit, Ɛli yettwassen d win yettarun isefra ak ttezlatin, imi tizlatin ines timezwura i yura, Kra deg-sent cnantent kra icennayen yetwasenen, gar-asen Lani Rabaḥ.
 
-Asmi yella di tesdawit, dinna Ɛli i d-yebda yettbin-id, imi yella yetturar snitra, ixeddem aẓawan, icennu i yiwet n tarbaɛt umezgun n tesdawit n Dda Lmulud at Mɛemmar di Tiziwezzu, uwumi qqaren <''Meɣres''> ; Di tallit nni, yebda yetturar tizlatin n Yidir, Simon and Garfunkel, Moustaki, Cabrel, Inaṣliyen, [[Pink Floyd]], Abranis, Cat Steγens,... S wakka Ɛli ilemmed u yebda isurifen ines imezwura deg-wubrid n lfen.
+Asmi yella di tesdawit, dinna Ɛli i d-yebda yettbin-id, imi yella yetturar snitra, ixeddem aẓawan, icennu i yiwet n tarbaɛt umezgun n tesdawit n Dda Lmulud at Mɛemmar di Tiziwezzu, uwumi qqaren ''Meɣres'' ; Di tallit nni, yebda yetturar tizlatin n Yidir, Simon and Garfunkel, Moustaki, Cabrel, Inaṣliyen, [[Pink Floyd]], Abranis, Cat Steγens,... S wakka Ɛli ilemmed u yebda isurifen ines imezwura deg-wubrid n lfen.
 
-Di 2001, yesekles tasfift-ines tamenzut, anda is yeqqar : <''Amsebrid''>, s wakka, s tesfift-agi, Ɛli yekcem annar n cna.Ur iɛeṭṭel ara yebda timaɣriwin di tmurt n [[leqbayel]], deg-waxxam n yedles Lmulud at Mɛemmar, daɣen deg-wuxxam umezgun n [[Bgayet]].
+Di 2001, yesekles tasfift-ines tamenzut, anda is-yeqqar : ''Amsebrid'', s wakka, s tesfift-agi, Ɛli yekcem annar n cna.Ur iɛeṭṭel ara yebda timaɣriwin di tmurt n [[leqbayel]], deg-waxxam n yedles Lmulud at Mɛemmar, daɣen deg-wuxxam umezgun n [[Bgayet]].
 
 ==Arazen & Tifaskiwin==
 
@@ -26,20 +26,23 @@ Araz amenzu, yewwit-id di tafska taɣennawt n cna n [[teqbaylit]], araz wis sin,
 
 ==Abrid n lɣarba==
 
-Deg useggas n 2000, Ɛli yeǧǧa tamurt-is, yeǧǧa taddart-is, yunag ar tmurt n Fransa, anda yella yezdaɣ di Lpari, ula dinna, am da di tmurt iqeddec, ixeddem daɣen timaɣriwin.
+Deg useggas n 2000, Ɛli yeǧǧa tamurt-is, yeǧǧa taddart-is, yunag ar tmurt n Fransa, anda yella yezdeɣ di Lpari, ula dinna, am da di tmurt iqeddec, ixeddem daɣen timaɣriwin.
+
 Aken assegas, ilemnd n tefsut tabarkant, Ɛli yecna di tzeqqa n Zinit (Zénith) di Lpari, s idis n ucennay ameqran Farḥat Imaziɣen Imula, Akli. D, d Gnawa Diffusion.
-Zdat n lɣaci id yusan, tizlitt-is <A xali sliman> yufrar-d yarna taɛǧeb nezzah i lɣaci nni id yussan, yeslkelsitt yarratt di <le clips> weqbel ad yessufeɣ tasfift-is, tinna yessufeɣ di 2005.
-Ɛli yessewjed tasfift tamaynut id yefɣen deg-wuseggas n 2009, anda is yeqqar : "Akka id amur".
+
+Zdat n lɣaci id yusan, tizlitt-is ''A xali sliman'' yufrar-d yarna taɛǧeb nezzah i lɣaci nni id yussan, yeslkelsitt yarratt di <le clips> weqbel ad yessufeɣ tasfift-is, tinna yessufeɣ di 2005.
+
+Ɛli yessewjed tasfift tamaynut id-yefɣen deg useggas n 2009, anda is-yeqqar : "Akka id amur".
 
 ==Tisfifin n Ɛli Ɛemran==
 
-2001, Tasfift tamenzut anda is yeqqar : <Amsebrid>
+2001, Tasfift tamenzut anda is yeqqar: ''Amsebrid''
 
-2005, Tasfift tis snat anda is yeqqar : <Xali sliman>
+2005, Tasfift tis snat anda is yeqqar: ''Xali sliman''
 
-2009, Tasfift tis tlata anda is yeqqar : <Akka id amur>
+2009, Tasfift tis tlata anda is yeqqar: ''Akka id amur''
 
-2013, Tasfift tis rebɛa anda is yeqqar : <Tizi n leryah>
+2013, Tasfift tis rebɛa anda is yeqqar: ''Tizi n leryah'
 
 ==Ayen nniḍen==
 ...
