*Empty MediaWiki Message*

--- a/Amurakuc.mw
+++ b/Amurakuc.mw
@@ -20,7 +20,7 @@ Ar neqqar imezdaɣen n '''Amurakuc''' ''"'' ''Imerrakciyin "'' s [[Taɛṛa
 !Ayyur
 !''<small>Yennayer</small>''
 !''<small>Furar</small>''
-!''<small>Maɣres</small>''
+!''<small>Meɣres</small>''
 !''<small>Brir</small>''
 !''<small>Mayu</small>''
 !''<small>Yunyu</small>''
