*Empty MediaWiki Message*

--- a/1995.mw
+++ b/1995.mw
@@ -1,31 +1,3 @@
 Aseggas '''1995''' d aseggas aḥerfi (365 n wussan) ibeddun ass n ''Acer''. D aseggas wis 1995 deg wakud-agi-neɣ.
 
-Tira n '''1995''' : « Agim tẓa n tmiḍi tẓa n tmarwin semmus »
-
-= Tiswasin nniḍen =
-
-= Ineḍruyen n 1995 =
-
-==Yennayer==
-
-==Furar==
-
-==Maɣres==
-
-==Yebrir==
-
-==Mayyu==
-
-==Yunyu==
-
-==Yulyu==
-
-==Ɣuct==
-
-==Ctamber==
-
-==Tuber==
-
-==Wamber==
-
-==Dujamber==
+Tira n '''1995''' : "Agim tẓa n tmiḍi tẓa n tmarwin semmus".
