*Empty MediaWiki Message*

--- a/2018.mw
+++ b/2018.mw
@@ -21,7 +21,7 @@ Aseggas '''2018''' deg teswast tagrigurit (calendrier grégorien), iwulem i useg
 
 ==Furar==
 
-==Maɣres==
+==Meɣres==
 
 ==Yebrir==
 
