--- a/Agadir.mw
+++ b/Agadir.mw
@@ -17,7 +17,7 @@ Ar neqqar imezdaɣen n '''Agadir''' ''"'' ''Agadiriyin "'' s [[Taɛṛabt|t
 !Ayyur
 !''<small>Yennayer</small>''
 !''<small>Furar</small>''
-!''<small>Maɣres</small>''
+!''<small>Meɣres</small>''
 !''<small>Brir</small>''
 !''<small>Mayu</small>''
 !''<small>Yunyu</small>''
