--- a/Libya.mw
+++ b/Libya.mw
@@ -48,8 +48,8 @@ Tamanaɣt n Libya d [[Ṭrables]]. Tutlayt tunṣibt d taɛrabt wanag [[Imaziɣe
 *[[Lgubba]]
 
 == Tanekra n 2011 ==
-Yekkred wegdud alibi i wakken ad isuffeɣ [[Mɛemmer Lqeddafi]], aselway n Libya seg [[1969]]. 
-S tallalt n tdukkla n tmura i ddukklen (ONU) akk d OTAN, semmus (5) wagguren agdud alibi issaweḍ ad yekcem [[Ṭrables]]. 
+Yekker-d wegdud alibi i wakken ad isuffeɣ [[Mɛemmer Lqeddafi]], aselway n Libya seg [[1969]]. 
+S tallalt n tdukkla n tmura i ddukklen (ONU) akked OTAN, xemsa n wayyuren agdud alibi yessaweḍ ad yekcem [[Ṭrables]]. 
 
 
 [[Taggayt:Libya]]
