*Empty MediaWiki Message*

--- a/Caracas.mw
+++ b/Caracas.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-Tamanaɣt n tmurt n [[Venezuela]].
+'''Caracas''' d tamanaɣt n tmurt n [[Venezuela]].
 [[Tugna:Avila view 2.jpg|right|300px]]
 
 [[Category:Timdinin]]
