*Empty MediaWiki Message*

--- a/Nishitokyo.mw
+++ b/Nishitokyo.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Nishitokyo''' d agmam (quartier) deg temdint n [[Tokyo]] (tamaneɣt n [[Japun]]). Zedɣen-t 191.927 n yimezdaɣen.
 
 [[Category:Japon]][[Category:Tokyo]]
