*Empty MediaWiki Message*

--- a/Lkarimeyya.mw
+++ b/Lkarimeyya.mw
@@ -1,5 +1,5 @@
 {{Databox}}
 '''Lkarimeyya''' (s tefṛensist: ''El Karimia''), d taɣiwant n twilayt n [[Cclef]], zedɣen-tt 25.060 n yimezdaɣen. Deg tallit n tuṭṭfa tafṛensist llan ɣɣaren-as ''Lamartine''. Deg tɣiwant-a ay yemmut [[Henri Maillot]] deg 1956.
 
-{{Agni Tiɣiwanin n twilayt n Cclef}}
+{{Tawilayt n Cclef}}
 [[Category:Taɣiwant n twilayt n Cclef]]
