*Empty MediaWiki Message*

--- a/Ursu_n_ureɣ.mw
+++ b/Ursu_n_ureɣ.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Ursu n ureɣ''' (s [[Talmant|telmant]] ''Goldener Bär'') d [[arraz]] yettunefken deg [[Taberlinit|Tafaska n Berlin]] seg [[1951]]. Yettunefk sɣur amgalaw unṣib i [[asaru|wsaru]] aɣezfan n timenyagert tagraɣlant. Ursu d [[azamul]] n tamdint n [[Berlin]]. 
 
 Ursu n ureɣ yetsreɣɣet sɣur [[Renée Sintenis]]. 
