*Empty MediaWiki Message*

--- a/Ɛebbas_U_Fernas.mw
+++ b/Ɛebbas_U_Fernas.mw
@@ -1,6 +1,6 @@
 {{infobox biography}}
 
-'''Abu Lqasim Ɛebbas U Fernas U Wirdas Akurini (810-887)''', yettwassen s yisem n '''Ɛebbas U Fernas''' (s [[taɛrabt]]: عباس بن فرناس, s [[tafrensist|tefransist]]: Abbas ibn Firnas), d amesnulfu, d amejjay, d amsekrar (chimiste), d amẓẓawan (musicien), d amedyaz [[Imaziɣen|Amaziɣ]]<ref>{{Cite book|language=fr|author=|title= bibliothèque de l'école des hautes études|pages=160|éditeur=|date=1966|pages totales=|isbn=|url=https://books.google.fr/books?hl=fr&id=QLwtAAAAIAAJ&dq|access-date=2018-01-16}}</ref>{{,}}<ref>{{Cite book|language=en|author=Lynn Townsend White, Jr|title=Eilmer of Malmesbury, an Eleventh Century Aviator: A Case Study of Technological Innovation, Its Context and Tradition|pages=97-111|year=1961|date=|pages totales=|isbn=}}</ref>. Aẓar n wawal-agi ''Fernas'' yella s waṭas deg [[Lezzayer]] akked [[Ameṛṛuk|Marruk]]<ref>{{Cite journal|language=en|author=|first1=Lévi-Provençal,|last1=E.|title=ʿAbbās b. Firnās|journal=Encyclopaedia of Islam, Second Edition|date=2012|isbn=9789004161214|issn=|doi=10.1163/1573-3912_islam_sim_0021|url=https://dx.doi.org/10.1163/1573-3912_islam_SIM_0021|access-date=2018-01-16|pages=}}</ref>. Ilul deg ''Izn-Rand Onda'' (Ronda n tura) deg Lispan, yettwassen ladɣa imi d netta i d amezwaru deg umezruy i iɛerḍen ad yaffeg<ref name=":3">{{Cite book|language=en|author=Lynn Townsend White, Jr|title=Eilmer of Malmesbury, an Eleventh Century Aviator: A Case Study of Technological Innovation, Its Context and Tradition|pages=97-111|year=1961}}</ref>.
+'''Abu Lqasim Ɛebbas U Fernas U Wirdas Akurini (810-887)''', yettwassen s yisem n '''Ɛebbas U Fernas''' (s [[taɛrabt]]: عباس بن فرناس, s [[tafrensist|tefransist]]: Abbas ibn Firnas), d amesnulfu, d amejjay, d amsekrar (chimiste), d amẓẓawan (musicien), d amedyaz [[Imaziɣen|Amaziɣ]]<ref>{{Cite book|language=fr|author=|title= bibliothèque de l'école des hautes études|pages=160|éditeur=|date=1966|pages totales=|isbn=|url=https://books.google.fr/books?hl=fr&id=QLwtAAAAIAAJ&dq|access-date=2018-01-16}}</ref>{{,}}<ref>{{Cite book|language=en|author=Lynn Townsend White, Jr|title=Eilmer of Malmesbury, an Eleventh Century Aviator: A Case Study of Technological Innovation, Its Context and Tradition|pages=97-111|year=1961|date=|pages totales=|isbn=}}</ref>. Aẓar n wawal-agi ''Fernas'' yella s waṭas deg [[Lezzayer]] akked [[Ameṛṛuk|Marruk]]<ref>{{Cite journal|language=en|author=|first1=Lévi-Provençal|last1=E.|title=ʿAbbās b. Firnās|journal=Encyclopaedia of Islam, Second Edition|date=2012|isbn=9789004161214|issn=|doi=10.1163/1573-3912_islam_sim_0021|url=https://dx.doi.org/10.1163/1573-3912_islam_SIM_0021|access-date=2018-01-16|pages=}}</ref>. Ilul deg ''Izn-Rand Onda'' (Ronda n tura) deg Lispan, yettwassen ladɣa imi d netta i d amezwaru deg umezruy i iɛerḍen ad yaffeg<ref name=":3">{{Cite book|language=en|author=Lynn Townsend White, Jr|title=Eilmer of Malmesbury, an Eleventh Century Aviator: A Case Study of Technological Innovation, Its Context and Tradition|pages=97-111|year=1961}}</ref>.
 
 ==Aẓar d tmeddurt==
 Ilul '''Ɛebbas U Fernas''' deg '''Ronda''' deg yiwwet n twacult [[Imaziɣen|Tamaziɣt]] yeṭṭafaren '''''At Yefren''''' i yellan seddaw leḥkem n yiamawiyen.
