*Empty MediaWiki Message*

--- a/Mumbay.mw
+++ b/Mumbay.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''Mumbay''' (s tefrensist: ''Bombay''), d tamdint tameqrant akk deg [[Lhend]], tezga-d deg utaram (lɣerb) n tmurt, ɣef yiri n [[Agaraw Ahendi|Ugaraw Ahendi]]. Zedɣen-tt 13.830.884 n yimezdaɣen.
 
 [[Category:Timdinin]][[Category:Lhend]]
