*Empty MediaWiki Message*

--- a/Aburɣes.mw
+++ b/Aburɣes.mw
@@ -106,9 +106,9 @@ iburɣas d [[aɣersiw|iɣersiwen]] imezwura id ibanen yakk deg [[tagnit|tegnit]]
 | title = Insecta
 | date = 2002
 | publisher = Tree of Life Web Project
-| access-date = 12 May 2009
+| access-date = 12 mayyu 2009
 | archive-url = https://web.archive.org/web/20190402093445/http://www.tolweb.org/Insecta/8205
-| archive-date = 2 april 2019 }}</ref> D wuṭṭun n telmas i yal tagrawt.<ref name="number">{{cite book|author =Erwin, Terry L.|date=1997|title=Biodiversity at its utmost: Tropical Forest Beetles|pages=27–40}} In: {{cite book|editor1=Reaka-Kudla, M. L.|editor2=Wilson, D. E.|editor3=Wilson, E. O.|title=Biodiversity II|publisher=Joseph Henry Press, Washington, D.C.}}</ref> [[Tarfriwin]]، [[Timzifriwin]]، d [[Tuffiɣfriwin| ]] ahat-itent d tigrawi  [[azunẓar|tizunẓarin]].
+| archive-date = 2 yebrir 2019 }}</ref> D wuṭṭun n telmas i yal tagrawt.<ref name="number">{{cite book|author =Erwin, Terry L.|date=1997|title=Biodiversity at its utmost: Tropical Forest Beetles|pages=27–40}} In: {{cite book|editor1=Reaka-Kudla, M. L.|editor2=Wilson, D. E.|editor3=Wilson, E. O.|title=Biodiversity II|publisher=Joseph Henry Press, Washington, D.C.}}</ref> [[Tarfriwin]]، [[Timzifriwin]]، d [[Tuffiɣfriwin| ]] ahat-itent d tigrawi  [[azunẓar|tizunẓarin]].
 |}
 
 == Tilmas n iburɣas ==
