--- a/Azaɣar_(Tizi_Wezzu).mw
+++ b/Azaɣar_(Tizi_Wezzu).mw
@@ -60,7 +60,7 @@ Deg useggas [[1889]], imi tella tasehrest taṛumit, semman-as i taɣiwant '''Pi
 {{Cite journal
  | title = Atlas n Lezzayer 1830-1960 
  | publisher = Tiẓrigin Taṛcibin & Idles
- | date = fuṛaṛ 2011
+ | date = furar 2011
  | isbn = 978-2-35077-157-1
  | url = http://www.archivesetculture.fr/livre-archives-et-culture-genealogie-atlas-de-l-algerie-1830-1960-336.html
 }}</ref>.
