*Empty MediaWiki Message*

--- a/Bill_Gates.mw
+++ b/Bill_Gates.mw
@@ -5,7 +5,7 @@ Seg useggwas 1987, Bill Gates yekcem deg [[The World's Billionaires|wumuɣ ''For
 
 Bill Gates d yiwen aṛemmas n [[aselkim n wuxxam|tagrawla taselkimant]] ugaren wiyaḍ nniḍen. Gates yeṭṭfed aṭas n izaɣanen ɣef tataktit ines n iweẓla, ayen ttwalin medden am mgal anemsazwar, tannayt deg kra n tijṛa sseɣretentt aṭas izrafen n tinefra.{{Sfnm |1a1=Lesinski |1y=2006 |1p=96 |2a1=Manes |2y=1994 |2p=459}}  Ticki deg umecwaṛ ines, Gates yeḍfar aṭas n isenfaren imuhaken, yefka-d tallayt tameqrant n iṣurdiyen i aṭas n tuddsiwin n ṣeddeq akkw d ahilen ussnanen n unadi seg [[Bill & Melinda Gates Foundation|Tasbeddit n Bill & Melinda Gates]], ttwassebded deg useggwas 2000.
 
-Gates ittixer leqdic ines n aselway anemhal amatu n Microsoft deg waggur yennayer 2000. Yeqqim d aselway, dɣa yesnulfa-d amahil n aɣella amasdag n iseɣẓanen i iman-is.<ref>{{cite web|title = Gates steps down as Microsoft CEO|url = http://www.forbes.com/2000/01/13/mu7.html|website = Forbes|date = January 13, 2000|access-date = January 21, 2016|first = David|last = Einstein}}</ref> Deg waggur n yunyu 2006, Gates yesseɣret ad iɛeddi seg wakud ummid di Microsoft ar wakud amuran, daɣen ad iɛeddi ar wakud ummid di Bill & Melinda Gates Foundation.<ref>{{cite web|title = Microsoft Chairman Gates to leave day-to-day role. – Jun. 16, 2006|url = http://money.cnn.com/2006/06/15/technology/microsoft_news/index.htm?iid=EL|website = money.cnn.com|access-date = January 21, 2016}}</ref> Yessekki s ufesnan tiwura ines ar [[Ray Ozzie]] (aɣella amasdag n iseɣẓanen) d [[Craig Mundie]] (aɣella n unadi d tasuddest).<ref name=":1">{{cite web|title = Bill Gates {{!}} Development of Information and Knowledge Management|url = http://www.tlu.ee/~sirvir/IKM/Development_of_IKM/bill_gates.html|website = www.tlu.ee|access-date = January 21, 2016}}</ref> Ozzie later left the company. Gates's last full-time day at Microsoft was June 27, 2008.<ref name=":1" /> Yettixer leqdic ines n aselway n Microsoft, deg waggur furar 2014, yeṭṭfed amahil amaynu n asemtar n tisnetwilin iwakken ad yedhel CEO amaynu [[Satya Nadella]].<ref name=":2" />
+Gates ittixer leqdic ines n aselway anemhal amatu n Microsoft deg waggur yennayer 2000. Yeqqim d aselway, dɣa yesnulfa-d amahil n aɣella amasdag n iseɣẓanen i iman-is.<ref>{{cite web|title = Gates steps down as Microsoft CEO|url = http://www.forbes.com/2000/01/13/mu7.html|website = Forbes|date = January 13, 2000|access-date = January 21, 2016|first = David|last = Einstein}}</ref> Deg waggur n yunyu 2006, Gates yesseɣret ad iɛeddi seg wakud ummid di Microsoft ar wakud amuran, daɣen ad iɛeddi ar wakud ummid di Bill & Melinda Gates Foundation.<ref>{{cite web|title = Microsoft Chairman Gates to leave day-to-day role. – Jun. 16, 2006|url = http://money.cnn.com/2006/06/15/technology/microsoft_news/index.htm?iid=EL|website = money.cnn.com|access-date = January 21, 2016}}</ref> Yessekki s ufesnan tiwura ines ar [[Ray Ozzie]] (aɣella amasdag n iseɣẓanen) d [[Craig Mundie]] (aɣella n unadi d tasuddest).<ref name=":1">{{cite web|title = Bill Gates {{!}} Development of Information and Knowledge Management|url = http://www.tlu.ee/~sirvir/IKM/Development_of_IKM/bill_gates.html|website = www.tlu.ee|access-date = January 21, 2016}}</ref> Ozzie later left the company. Gates's last full-time day at Microsoft was June 27, 2008.<ref name=":1" /> Yettixer leqdic ines n aselway n Microsoft, deg waggur furar 2014, yeṭṭfed amahil amaynu n asemtar n tisnetwilin iwakken ad yedhel CEO amaynu [[Satya Nadella]].
 
 == Tizmilin ==
 {{Reflist | group="lower-alpha"}}
