*Empty MediaWiki Message*

--- a/Tamurt_n_Leqbayel.mw
+++ b/Tamurt_n_Leqbayel.mw
@@ -22,7 +22,7 @@
  | tanfalit = Ad nerreẓ wala ad neknu
  | tanfalit s Teqbaylit = 
  | imseɣret = 
- | tamurt = {{Tamurt|Zzayer}}
+ | tamurt = {{Flag|Zzayer}}
  | timdinin = Zzayer, Tizi Wezzu, Bgayet, Tubiret, Bumerdas.
  | imḍebber = 
  | tutlayin = [[Taqbaylit]]<br>[[Taɛrabt tazzayrit]]<br>[[Taɛrabt]]<br>[[Tafransist]]<br>[[Taglizit]] (deg iɣerbazen)
