*Empty MediaWiki Message*

--- a/ISO_3166-1.mw
+++ b/ISO_3166-1.mw
@@ -1,3 +1,4 @@
+{{Databox}}
 '''ISO 3166-1''' d yiwen seg yeḥricen n tizeɣt ISO 3166. 
 
 Tessuffeɣ-it-id ISO, i tikelt tamenzult deg [[1974]], tikelt tis snat deg 2006, tikelt tis kraḍ deg 2013, tettmuddu  3 n tengalin i tumra  n umaḍal <span> </span>:
