--- a/Tutlayin_Timaziɣin_n_ugafa.mw
+++ b/Tutlayin_Timaziɣin_n_ugafa.mw
@@ -12,7 +12,7 @@ Zik nni, Tutlayin-a llant tgin-t-d [[tazrart tantalayt]] maca anekcum n [[tutlay
 ** [[Tamaziɣt n Figig]]
 ** [[Tutlayt tacenwit|Tacenwin]]
 ** [[Tagurart]]
-* [[Tutlayin n Aṭlas]] dɣa tutlayt-a tegzem ar waṭas n tutlayin neɣ n [[tantala|tentaliwin]] (deg teẓri n kra n imusnawen)
+* [[Tutlayin timaziɣin n waṭlas]] dɣa tutlayt-a tegzem ar waṭas n tutlayin neɣ n [[tantala|tentaliwin]] (deg teẓri n kra n imusnawen)
 ** [[Tutlayt tacelḥit|Tasusit]]
 ** [[Tamaziɣt n waṭlas alemmas]]
 ** [[Taznagt n Srayer]]
