*Empty MediaWiki Message*

--- a/Yusef_Uqasi.mw
+++ b/Yusef_Uqasi.mw
@@ -1,3 +1,4 @@
-'''Yusef Uqasi''' d amedyaz aqbayli , illul deg At Jennad.
+{{Databox}}
+'''Yusef Uqasi''' d amedyaz aqbayli , ilul deg [[At Jennad]].
 
 [[Category:Tameddurt]][[Category:Amedyaz]]
