*Empty MediaWiki Message*

--- a/Lexmis_n_Tmelyant.mw
+++ b/Lexmis_n_Tmelyant.mw
@@ -1,5 +1,6 @@
+{{Databox}}
 '''Lexmis n Tmelyant''' (s tefrensist: ''Khemis Miliana''), d taɣiwant n [[Ɛin Ddefla]]. Zedɣen-tt 74.349 n yimezdaɣen. Deg tallit n tuṭṭfa tafrensist, llan ttinin-as ''Affreville''.
 
-{{Agni n Tiɣiwanin n twilayt n Ɛin Ddefla}}
+{{Twilayt n Ɛin Ddefla}}
 
 [[Category:Taɣiwant n Ɛin Ddefla]]
