*Empty MediaWiki Message*

--- a/Lexmis_n_Tmelyant.mw
+++ b/Lexmis_n_Tmelyant.mw
@@ -1,6 +1,6 @@
 {{Databox}}
 '''Lexmis n Tmelyant''' (s tefrensist: ''Khemis Miliana''), d taɣiwant n [[Ɛin Ddefla]]. Zedɣen-tt 74.349 n yimezdaɣen. Deg tallit n tuṭṭfa tafrensist, llan ttinin-as ''Affreville''.
 
-{{Twilayt n Ɛin Ddefla}}
+{{Tawilayt n Ɛin Ddefla}}
 
 [[Category:Taɣiwant n Ɛin Ddefla]]
