--- a/Ḥamid_Tibuci.mw
+++ b/Ḥamid_Tibuci.mw
@@ -1,5 +1,5 @@
 {{Databox}}
-'''Ḥamid Tibuci''' (ilul deg [[12]] [[Furar]] [[1951]] deg [[Bgayet]]), d amedyaz adzayri yessefruyen s tefrensist yerna d amekla (peintre). Yuwey-d turagt (licence) n tanglizit yerna yezdeɣ deg [[Fransa]] seg useggas n [[1982]]. Gar yedlisen-nnes: Mer ouverte ([[Ilel iledyen]], 1973) akked Soleil d'herbe (1977).
+'''Ḥamid Tibuci''' (ilul deg [[12]] [[Furar]] [[1951]] deg [[Bgayet]]), d amedyaz azzayri yessefruyen s tefrensist yerna d amekla (peintre). Yuwey-d turagt (licence) n tanglizit yerna yezdeɣ deg [[Fransa]] seg useggas n [[1982]]. Gar yedlisen-nnes: Mer ouverte ([[Ilel iledyen]], 1973) akked Soleil d'herbe (1977).
 
 [[Category:Tameddurt]]
 [[Category:Amekla]]
