*Empty MediaWiki Message*

--- a/Ipactunen.mw
+++ b/Ipactunen.mw
@@ -49,7 +49,7 @@
 | pop15 = 1,181
 | ref15 = <ref>http://pxnet2.stat.fi/PXWeb/pxweb/fi/StatFin/StatFin__vrm__vaerak/statfin_vaerak_pxt_11rl.px/?rxid=726cd24d-d0f1-416a-8eec-7ce9b82fd5a4</ref>
 | langs = [[Pashto]]<br><small>''Minor: [[Dari language|Dari]] (in Afghanistan), [[Urdu]] (in Pakistan and India), [[Punjabi language|Punjabi]], [[Hindko]], [[Ormuri]], [[Dardic languages|Dardic]], [[Balochi language|Balochi]]''</small>
-| rels = Islam ([[Tasunnit]])<br />{{smaller|''akked amur amecṭuḥ n [[Taciɛit n 12 limamat]] akked [[tahindut]]''<ref name="Haider2018">{{cite news|url=http://www.thehindu.com/news/national/tattooed-blue-skinned-hindu-pushtuns-look-back-at-their-roots/article22645932.ece|title=Tattooed ‘blue-skinned’ Hindu Pushtuns look back at their roots|last=Haider|first=Suhasini|date=3 February 2018|newspaper=[[The Hindu]]|language=English|accessdate=24 March 2018}}</ref><ref>{{cite web|url=http://www.umsl.edu/services/govdocs/wofact2008/geos/af.html|title=Afghanistan|date=18 December 2008|publisher=CIA: The World Factbook|language=English|accessdate=24 March 2018}}</ref>}}
+| rels = Islam ([[Tasunnit]])<br />{{smaller|''akked amur amecṭuḥ n [[Taciɛit n 12 limamat]] akked [[tahindut]]''<ref name="Haider2018">{{cite news|url=http://www.thehindu.com/news/national/tattooed-blue-skinned-hindu-pushtuns-look-back-at-their-roots/article22645932.ece|title=Tattooed ‘blue-skinned’ Hindu Pushtuns look back at their roots|last=Haider|first=Suhasini|date=3 February 2018|newspaper=[[The Hindu]]|language=en|accessdate=24 March 2018}}</ref><ref>{{cite web|url=http://www.umsl.edu/services/govdocs/wofact2008/geos/af.html|title=Afghanistan|date=18 December 2008|publisher=CIA: The World Factbook|language=en|accessdate=24 March 2018}}</ref>}}
 | native_name = 
 | native_name_lang = 
 | related_groups = 
